Image cropper styles fixed

--- a/frontend/src/app/modules/shared/crop-image/crop-image.component.sass
+++ b/frontend/src/app/modules/shared/crop-image/crop-image.component.sass
@@ -47,52 +47,6 @@
         width: 100%
         height: 100%
         border-radius: 50%
-        i
-          display: block
-          font-size: 3rem
-          width: fit-content
-          position: relative
-          top: 50%
-          left: 50%
-          transform: translate(-40%, -60%)
-        input[type='file']
-          position: absolute
-          top: 0
-          left: 0
-          height: 100%
-          width: 100%
-          border-radius: 50%
-          background: none
-          text-indent: 100em
-          cursor: pointer
-      #image
-        display: block
-        position: absolute
-        height: 215px
-        width: 215px
-        object-fit: cover
-        border-radius: 50% 
-        border: none
-        background: $drk-rain
-        text-indent: 100rem
-    .form-group
-      margin-top: 10px
-    input[type='text']
-      background: $drk-rain
-      border-radius: 50px
-      color: $text
-      font-family: Rubik
-    textarea
-      height: 130px
-      background: $drk-rain
-      border-radius: 20px
-      color: $text
-      font-family: Rubik
-    select
-      background: $drk-rain
-      border-radius: 50px
-      color: $text
-      font-family: Rubik
     .buttons-row
       display: flex
       justify-content: center
